Add alt text to icons and images

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,10 @@ author:
   twitter: thomasvarnish
   github:  tvarnish
   linkedin: thomasvarnish
-  email: twv17@imperial.ac.uk
+  email: 
+    user: 71vwt
+    domain: lairepmi
+    tld: ku.ca.
 
 # Build settings
 markdown: kramdown
