Add "About" page and basic structure for blog
Add new page links and sidebar, including an "About" page (for
introduction, etc) and a blog homepage (which lists all of the published
blog posts). No blog posts are added yet.

--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,16 @@ author:
     domain: lairepmi
     tld: ku.ca.
 
+sitepages:
+  - url: about/
+    label: About
+  - url: blog/
+    label: Blog
+
 # Build settings
 markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+kramdown:
+  footnote_backlink: "&#x2934;&#xFE0E;&nbsp;&nbsp;"
