Correct site url in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Aspiring physicist. Space enthusiast. Occasional maker of things. 
   Studying MSci Physics at Imperial College London.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://thomasvarnish.co.uk" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.thomasvarnish.co.uk" # the base hostname & protocol for your site, e.g. http://example.com
 
 author:
   twitter: ThomasVarnish
