Add CV summary page
Add summary of my CV as a new page. Include links on "About" page. Add
relevant styling necessary for the new page.

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ sitepages:
     label: About
   # - url: blog/
   #   label: Blog
+  - url: cv/
+    label: CV
 
 # Build settings
 markdown: kramdown
