--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,8 +1,8 @@
 research:
   - where: Astrophysics Group, Imperial College London
     title: MSci Project
-    supervisors: Dr David Clements and Dr Chris Pearson (RAL)
-    when: 2020 - 2021
+    supervisors: Dr David Clements (Imperial) and Dr Chris Pearson (RAL)
+    when: 2020 - Present
 
   - where: MAGPIE Lab, Imperial College London
     title: UROP Research Student
@@ -27,7 +27,7 @@ research:
 education:
   - name: Imperial College London
     what: MSci Physics
-    when: 2017 - 2021
+    when: 2017 - (2021)
 
   - name: Warwick School
     what: A-Level and GCSE
