Update contact button

--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ author:
   linkedin: thomasvarnish
   orcid: 0000-0002-8078-214X
   email: 
-    user: 71vwt
-    domain: lairepmi
-    tld: ku.ca.
+    user: hsinravt
+    domain: tim
+    tld: ude.
 
 sitepages:
   - url: about/
