Update PhD project description

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,7 +2,7 @@ research:
   - where: PUFFIN Group, Massachusetts Institute of Technology (MIT)
     title: Graduate Research Assistant
     supervisors: Prof. Jack Hare
-    project: Pulsed-power driven magnetic reconnection
+    project: Developing experimental platforms for pulsed-power driven magnetic reconnection (within an externally-generated field), for guide-field reconnection experiments.
     when: 2021 - Present
 
   - where: Astrophysics Group, Imperial College London
